# Graphics-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: market_simulator.cpp
source_code/graphics_engine/: CMakeLists.txt
source_code/graphics_engine/include/gpu/: vertex_manager.h
source_code/graphics_engine/include/math/: simd_math.h
source_code/graphics_engine/include/memory/: allocator.h
source_code/graphics_engine/include/profiler/: profiler.h
source_code/graphics_engine/include/render/: pipeline.h
source_code/graphics_engine/shaders/: pbr_pixel.hlsl  pbr_vertex.hlsl  shadow_vertex.hlsl
source_code/graphics_engine/src/: pipeline.cpp  simd_math.cpp  vertex_manager.cpp
source_code/graphics_engine/tests/: benchmark.cpp  test_engine.cpp
